[package]
name = "omdu_hook"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.81"
element-ptr = "0.0.2"
retour = { git = "https://github.com/Hpmason/retour-rs", features = ["static-detour"] }
simple-log = "1.6.0"
widestring = "1.0.2"
windows = { version = "0.54.0", features = [
  "Win32_System_LibraryLoader",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
] }
